# Numerical-Methods-Class-Project

./: COMO_USAR_PDF.md  README.md  gerador_pdf.py  main.py  numerical_dif.py  pyproject.toml  regressao.py  solvers_edo.py  t.py
