[tool.poetry]
name = "numerical-methods-class-project"
version = "0.1.0"
description = "A numerical methods class project implementing ODE solvers and numerical differentiation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
matplotlib = "*"
reportlab = "*"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
